--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-torch>=2.0.0
-transformers>=4.30.0
-streamlit>=1.28.0
-pytorch-crf>=0.7.2
-mistralai>=1.10.0
-pandas>=2.0.0
-numpy>=1.24.0
-scikit-learn>=1.3.0
+pandas>=2.0
+numpy>=1.24
+scikit-learn>=1.3
+rapidfuzz>=3.0
+
+osmnx>=1.8
+geopandas>=0.14
+shapely>=2.0
+
+nlpaug>=1.1.11
